--- a/01_main_problem_no_bounderys.ipynb
+++ b/01_main_problem_no_bounderys.ipynb
@@ -863,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "aeb7ce50b0b515f4",
    "metadata": {
     "ExecuteTime": {
@@ -874,6 +874,15 @@
     }
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "GPU available: False, used: False\n",
+      "TPU available: False, using: 0 TPU cores\n",
+      "HPU available: False, using: 0 HPUs\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -887,16 +896,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "GPU available: False, used: False\n",
-      "TPU available: False, using: 0 TPU cores\n",
-      "HPU available: False, using: 0 HPUs\n",
       "C:\\Users\\hab185\\Documents\\00_Tim\\01_Implementierung\\pina_oedometer\\venv\\Lib\\site-packages\\pytorch_lightning\\loops\\fit_loop.py:310: The number of training batches (10) is smaller than the logging interval Trainer(log_every_n_steps=50). Set a lower value for log_every_n_steps if you want to see logs for the training epoch.\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5ec3dbc0b97444ed9bacf6cde7d35d71",
+       "model_id": "82bd686fd4434533b0114fd877434ea6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -906,31 +912,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "`Trainer.fit` stopped: `max_epochs=1000` reached.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Finale Loss Werte\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'data_loss': tensor(6.4086e+10), 'mean_loss': tensor(6.4086e+10)}"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1002,60 +983,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "de070fe2-16f3-40f1-8602-36aebfb3818a",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/markdown": [
-       "### Data-Loss bis sigma_19\n",
-       "\n",
-       "| Index | total_epsilon | True sigma_t+1 | Predicted sigma_t+1 | Loss (True - Predicted) |\n",
-       "|--|--------------|---------------|--------------------|------------------------|\n",
-       "| 0 | 0 | 0.2 | 0.3615 | -0.1615 |\n",
-       "| 1 | 0.0005 | 0.24 | 0.3939 | -0.1539 |\n",
-       "| 2 | 0.001 | 0.288 | 0.4331 | -0.1451 |\n",
-       "| 3 | 0.0015 | 0.3456 | 0.4817 | -0.1361 |\n",
-       "| 4 | 0.002 | 0.4147 | 0.5405 | -0.1258 |\n",
-       "| 5 | 0.0025 | 0.4977 | 0.5939 | -0.0962 |\n",
-       "| 6 | 0.003 | 0.5972 | 0.6744 | -0.0772 |\n",
-       "| 7 | 0.0035 | 0.7166 | 0.7726 | -0.056 |\n",
-       "| 8 | 0.004 | 0.86 | 0.8904 | -0.0304 |\n",
-       "| 9 | 0.0045 | 1.032 | 1.028 | 0.004 |\n",
-       "| 10 | 0.005 | 1.2383 | 1.1987 | 0.0396 |\n",
-       "| 11 | 0.0055 | 1.486 | 1.4124 | 0.0736 |\n",
-       "| 12 | 0.006 | 1.7832 | 1.6724 | 0.1109 |\n",
-       "| 13 | 0.0065 | 2.1399 | 1.9945 | 0.1454 |\n",
-       "| 14 | 0.007 | 2.5678 | 2.3848 | 0.183 |\n",
-       "| 15 | 0.0075 | 3.0814 | 2.8532 | 0.2282 |\n",
-       "| 16 | 0.008 | 3.6977 | 3.4135 | 0.2842 |\n",
-       "| 17 | 0.0085 | 4.4372 | 4.0829 | 0.3544 |\n",
-       "| 18 | 0.009 | 5.3247 | 4.8898 | 0.4349 |\n",
-       "| 19 | 0.0095 | 6.3896 | 5.8659 | 0.5237 |\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/markdown": [
-       "![Prediction vs True Solution](./graph/visual_prediction-vs-truesolution.png)<br>**Hinweis:** Datenpunkte liegen sehr nahe beieinander."
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "display_data_loss_table(data_dict=data_dict, delta_sigma_pred=pinn(input_points_combined).detach().numpy(), max_i=20)\n",
     "plot_prediction_vs_true_solution(pinn=pinn, data_dict=data_dict, graph_folder=graph_folder, img_visual_prediction_vs_truesolution=img_visual_prediction_vs_truesolution, \n",
@@ -1072,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "367434e3c1076341",
    "metadata": {
     "ExecuteTime": {
@@ -1080,20 +1013,7 @@
      "start_time": "2025-03-12T08:26:44.026059Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/markdown": [
-       "![NN Error result](./graph/img_nn_result_error.png)"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "pl.plot(solver=pinn, filename=f'./{graph_folder}/{img_nn_result_error}{img_extensions}')\n",
     "display(Markdown('![NN Error result](' + f'./{graph_folder}/{img_nn_result_error}{img_extensions}' + ')'))"
@@ -1109,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "2cc792fe16f92e4b",
    "metadata": {
     "ExecuteTime": {
@@ -1117,20 +1037,7 @@
      "start_time": "2025-03-12T08:21:26.295329Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/markdown": [
-       "![Loss Kurve](./graph/visual_loss.png)"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# plotting the solution\n",
     "pl.plot_loss(trainer, label='mean_loss', logy=True, filename=f'./{graph_folder}/{img_visual_loss}{img_extensions}')\n",
@@ -1147,71 +1054,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "b31d6d6b-82bc-4e94-aad6-44206ddebbea",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'sigma_t': array([1500,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
-      "          0,    0,    0,    0,    0,    0,    0,    0,    0], dtype=int64), 'total_epsilon': array([0.    , 0.0005, 0.0005, 0.0005, 0.0005, 0.0005, 0.0005, 0.0005,\n",
-      "       0.0005, 0.0005, 0.0005, 0.0005, 0.0005, 0.0005, 0.0005, 0.0005,\n",
-      "       0.0005, 0.0005, 0.0005, 0.0005]), 'delta_epsilon': array([0.0005, 0.    , 0.    , 0.    , 0.    , 0.    , 0.    , 0.    ,\n",
-      "       0.    , 0.    , 0.    , 0.    , 0.    , 0.    , 0.    , 0.    ,\n",
-      "       0.    , 0.    , 0.    , 0.    ]), 'delta_sigma': array([300,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
-      "         0,   0,   0,   0,   0,   0,   0], dtype=int64)}\n"
-     ]
-    },
-    {
-     "data": {
-      "text/markdown": [
-       "### Data-Loss bis sigma_19\n",
-       "\n",
-       "| Index | total_epsilon | True sigma_t+1 | Predicted sigma_t+1 | Loss (True - Predicted) |\n",
-       "|--|--------------|---------------|--------------------|------------------------|\n",
-       "| 0 | 0.0 | 300 | 278.5733 | 21.4267 |\n",
-       "| 1 | 0.0005 | 0 | 0.2587 | -0.2587 |\n",
-       "| 2 | 0.0005 | 0 | 0.2587 | -0.2587 |\n",
-       "| 3 | 0.0005 | 0 | 0.2587 | -0.2587 |\n",
-       "| 4 | 0.0005 | 0 | 0.2587 | -0.2587 |\n",
-       "| 5 | 0.0005 | 0 | 0.2587 | -0.2587 |\n",
-       "| 6 | 0.0005 | 0 | 0.2587 | -0.2587 |\n",
-       "| 7 | 0.0005 | 0 | 0.2587 | -0.2587 |\n",
-       "| 8 | 0.0005 | 0 | 0.2587 | -0.2587 |\n",
-       "| 9 | 0.0005 | 0 | 0.2587 | -0.2587 |\n",
-       "| 10 | 0.0005 | 0 | 0.2587 | -0.2587 |\n",
-       "| 11 | 0.0005 | 0 | 0.2587 | -0.2587 |\n",
-       "| 12 | 0.0005 | 0 | 0.2587 | -0.2587 |\n",
-       "| 13 | 0.0005 | 0 | 0.2587 | -0.2587 |\n",
-       "| 14 | 0.0005 | 0 | 0.2587 | -0.2587 |\n",
-       "| 15 | 0.0005 | 0 | 0.2587 | -0.2587 |\n",
-       "| 16 | 0.0005 | 0 | 0.2587 | -0.2587 |\n",
-       "| 17 | 0.0005 | 0 | 0.2587 | -0.2587 |\n",
-       "| 18 | 0.0005 | 0 | 0.2587 | -0.2587 |\n",
-       "| 19 | 0.0005 | 0 | 0.2587 | -0.2587 |\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/markdown": [
-       "![Prediction vs True Solution](./graph/visual_prediction-vs-truesolution_comp0.png)<br>**Hinweis:** Datenpunkte liegen sehr nahe beieinander."
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "new_data = extract_excel(file_path=\"files/oedometer/oedo_trainingsdata_compare.xlsx\", sheet_name=\"Res\", selected_columns=[1, 2, 3, 5], row_start_range=0)\n",
     "\n",
@@ -1235,72 +1081,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "eb148e33-5cce-4311-91f3-f4e11197f8ee",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'sigma_t': array([1500,    0,    0,    0,    0,    0,    0,    0,    0,  854,    0,\n",
-      "          0,    0,    0,    0,    0,    0,    0,    0,    0], dtype=int64), 'total_epsilon': array([0.    , 0.0005, 0.0005, 0.0005, 0.0005, 0.0005, 0.0005, 0.0005,\n",
-      "       0.0005, 0.0005, 0.001 , 0.001 , 0.001 , 0.001 , 0.001 , 0.001 ,\n",
-      "       0.001 , 0.001 , 0.001 , 0.001 ]), 'delta_epsilon': array([0.0005, 0.    , 0.    , 0.    , 0.    , 0.    , 0.    , 0.    ,\n",
-      "       0.    , 0.0005, 0.    , 0.    , 0.    , 0.    , 0.    , 0.    ,\n",
-      "       0.    , 0.    , 0.    , 0.    ]), 'delta_sigma': array([300. ,   0. ,   0. ,   0. ,   0. ,   0. ,   0. ,   0. ,   0. ,\n",
-      "       170.8,   0. ,   0. ,   0. ,   0. ,   0. ,   0. ,   0. ,   0. ,\n",
-      "         0. ,   0. ])}\n"
-     ]
-    },
-    {
-     "data": {
-      "text/markdown": [
-       "### Data-Loss bis sigma_19\n",
-       "\n",
-       "| Index | total_epsilon | True sigma_t+1 | Predicted sigma_t+1 | Loss (True - Predicted) |\n",
-       "|--|--------------|---------------|--------------------|------------------------|\n",
-       "| 0 | 0.0 | 300.0 | 278.5733 | 21.4267 |\n",
-       "| 1 | 0.0005 | 0.0 | 0.2587 | -0.2587 |\n",
-       "| 2 | 0.0005 | 0.0 | 0.2587 | -0.2587 |\n",
-       "| 3 | 0.0005 | 0.0 | 0.2587 | -0.2587 |\n",
-       "| 4 | 0.0005 | 0.0 | 0.2587 | -0.2587 |\n",
-       "| 5 | 0.0005 | 0.0 | 0.2587 | -0.2587 |\n",
-       "| 6 | 0.0005 | 0.0 | 0.2587 | -0.2587 |\n",
-       "| 7 | 0.0005 | 0.0 | 0.2587 | -0.2587 |\n",
-       "| 8 | 0.0005 | 0.0 | 0.2587 | -0.2587 |\n",
-       "| 9 | 0.0005 | 170.8 | 158.5627 | 12.2373 |\n",
-       "| 10 | 0.001 | 0.0 | 0.2587 | -0.2587 |\n",
-       "| 11 | 0.001 | 0.0 | 0.2587 | -0.2587 |\n",
-       "| 12 | 0.001 | 0.0 | 0.2587 | -0.2587 |\n",
-       "| 13 | 0.001 | 0.0 | 0.2587 | -0.2587 |\n",
-       "| 14 | 0.001 | 0.0 | 0.2587 | -0.2587 |\n",
-       "| 15 | 0.001 | 0.0 | 0.2587 | -0.2587 |\n",
-       "| 16 | 0.001 | 0.0 | 0.2587 | -0.2587 |\n",
-       "| 17 | 0.001 | 0.0 | 0.2587 | -0.2587 |\n",
-       "| 18 | 0.001 | 0.0 | 0.2587 | -0.2587 |\n",
-       "| 19 | 0.001 | 0.0 | 0.2587 | -0.2587 |\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/markdown": [
-       "![Prediction vs True Solution](./graph/visual_prediction-vs-truesolution_comp1.png)<br>**Hinweis:** Datenpunkte liegen sehr nahe beieinander."
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "new_data = extract_excel(file_path=\"files/oedometer/oedo_trainingsdata_compare2.xlsx\", sheet_name=\"Res\", selected_columns=[1, 2, 3, 5], row_start_range=0)\n",
     "\n",
@@ -1324,72 +1108,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "b0d968d0-ed7a-4ea2-b613-23935a7b789b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'sigma_t': array([1500,    0,    0,    0,    0,    0,    0,    0,    0,  854,    0,\n",
-      "          0,    0,    0,    0,    0,    0,    0,    0,    0], dtype=int64), 'total_epsilon': array([0.   , 0.001, 0.001, 0.001, 0.001, 0.001, 0.001, 0.001, 0.001,\n",
-      "       0.001, 0.002, 0.002, 0.002, 0.002, 0.002, 0.002, 0.002, 0.002,\n",
-      "       0.002, 0.002]), 'delta_epsilon': array([0.001, 0.   , 0.   , 0.   , 0.   , 0.   , 0.   , 0.   , 0.   ,\n",
-      "       0.001, 0.   , 0.   , 0.   , 0.   , 0.   , 0.   , 0.   , 0.   ,\n",
-      "       0.   , 0.   ]), 'delta_sigma': array([600. ,   0. ,   0. ,   0. ,   0. ,   0. ,   0. ,   0. ,   0. ,\n",
-      "       341.6,   0. ,   0. ,   0. ,   0. ,   0. ,   0. ,   0. ,   0. ,\n",
-      "         0. ,   0. ])}\n"
-     ]
-    },
-    {
-     "data": {
-      "text/markdown": [
-       "### Data-Loss bis sigma_19\n",
-       "\n",
-       "| Index | total_epsilon | True sigma_t+1 | Predicted sigma_t+1 | Loss (True - Predicted) |\n",
-       "|--|--------------|---------------|--------------------|------------------------|\n",
-       "| 0 | 0.0 | 600.0 | 278.5733 | 321.4267 |\n",
-       "| 1 | 0.001 | 0.0 | 0.2587 | -0.2587 |\n",
-       "| 2 | 0.001 | 0.0 | 0.2587 | -0.2587 |\n",
-       "| 3 | 0.001 | 0.0 | 0.2587 | -0.2587 |\n",
-       "| 4 | 0.001 | 0.0 | 0.2587 | -0.2587 |\n",
-       "| 5 | 0.001 | 0.0 | 0.2587 | -0.2587 |\n",
-       "| 6 | 0.001 | 0.0 | 0.2587 | -0.2587 |\n",
-       "| 7 | 0.001 | 0.0 | 0.2587 | -0.2587 |\n",
-       "| 8 | 0.001 | 0.0 | 0.2587 | -0.2587 |\n",
-       "| 9 | 0.001 | 341.6 | 158.5627 | 183.0374 |\n",
-       "| 10 | 0.002 | 0.0 | 0.2587 | -0.2587 |\n",
-       "| 11 | 0.002 | 0.0 | 0.2587 | -0.2587 |\n",
-       "| 12 | 0.002 | 0.0 | 0.2587 | -0.2587 |\n",
-       "| 13 | 0.002 | 0.0 | 0.2587 | -0.2587 |\n",
-       "| 14 | 0.002 | 0.0 | 0.2587 | -0.2587 |\n",
-       "| 15 | 0.002 | 0.0 | 0.2587 | -0.2587 |\n",
-       "| 16 | 0.002 | 0.0 | 0.2587 | -0.2587 |\n",
-       "| 17 | 0.002 | 0.0 | 0.2587 | -0.2587 |\n",
-       "| 18 | 0.002 | 0.0 | 0.2587 | -0.2587 |\n",
-       "| 19 | 0.002 | 0.0 | 0.2587 | -0.2587 |\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/markdown": [
-       "![Prediction vs True Solution](./graph/visual_prediction-vs-truesolution_comp2.png)<br>**Hinweis:** Datenpunkte liegen sehr nahe beieinander."
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "new_data = extract_excel(file_path=\"files/oedometer/oedo_trainingsdata_compare3.xlsx\", sheet_name=\"Res\", selected_columns=[1, 2, 3, 5], row_start_range=0)\n",
     "\n",
