--- a/01_main_problem_no_bounderys.ipynb
+++ b/01_main_problem_no_bounderys.ipynb
@@ -863,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "aeb7ce50b0b515f4",
    "metadata": {
     "ExecuteTime": {
@@ -912,6 +912,31 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "`Trainer.fit` stopped: `max_epochs=1000` reached.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Finale Loss Werte\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'data_loss': tensor(0.2160), 'mean_loss': tensor(0.2160)}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -983,12 +1008,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "de070fe2-16f3-40f1-8602-36aebfb3818a",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "### Data-Loss bis sigma_19\n",
+       "\n",
+       "| Index | total_epsilon | True sigma_t+1 | Predicted sigma_t+1 | Loss (True - Predicted) |\n",
+       "|--|--------------|---------------|--------------------|------------------------|\n",
+       "| 0 | 0 | 0.2 | 0.2001 | -0.0001 |\n",
+       "| 1 | 0.0005 | 0.24 | 0.2402 | -0.0002 |\n",
+       "| 2 | 0.001 | 0.288 | 0.2883 | -0.0003 |\n",
+       "| 3 | 0.0015 | 0.3456 | 0.346 | -0.0004 |\n",
+       "| 4 | 0.002 | 0.4147 | 0.415 | -0.0003 |\n",
+       "| 5 | 0.0025 | 0.4977 | 0.4972 | 0.0004 |\n",
+       "| 6 | 0.003 | 0.5972 | 0.5958 | 0.0014 |\n",
+       "| 7 | 0.0035 | 0.7166 | 0.7218 | -0.0052 |\n",
+       "| 8 | 0.004 | 0.86 | 0.8596 | 0.0004 |\n",
+       "| 9 | 0.0045 | 1.032 | 1.0312 | 0.0008 |\n",
+       "| 10 | 0.005 | 1.2383 | 1.2438 | -0.0054 |\n",
+       "| 11 | 0.0055 | 1.486 | 1.469 | 0.0171 |\n",
+       "| 12 | 0.006 | 1.7832 | 1.7415 | 0.0417 |\n",
+       "| 13 | 0.0065 | 2.1399 | 2.0951 | 0.0447 |\n",
+       "| 14 | 0.007 | 2.5678 | 2.5268 | 0.0411 |\n",
+       "| 15 | 0.0075 | 3.0814 | 3.0462 | 0.0352 |\n",
+       "| 16 | 0.008 | 3.6977 | 3.7234 | -0.0257 |\n",
+       "| 17 | 0.0085 | 4.4372 | 4.4499 | -0.0127 |\n",
+       "| 18 | 0.009 | 5.3247 | 5.4215 | -0.0969 |\n",
+       "| 19 | 0.0095 | 6.3896 | 6.6629 | -0.2733 |\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "![Prediction vs True Solution](./graph/visual_prediction-vs-truesolution.png)<br>**Hinweis:** Datenpunkte liegen sehr nahe beieinander."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "display_data_loss_table(data_dict=data_dict, delta_sigma_pred=pinn(input_points_combined).detach().numpy(), max_i=20)\n",
     "plot_prediction_vs_true_solution(pinn=pinn, data_dict=data_dict, graph_folder=graph_folder, img_visual_prediction_vs_truesolution=img_visual_prediction_vs_truesolution, \n",
@@ -1005,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "367434e3c1076341",
    "metadata": {
     "ExecuteTime": {
@@ -1013,7 +1086,20 @@
      "start_time": "2025-03-12T08:26:44.026059Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "![NN Error result](./graph/img_nn_result_error.png)"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "pl.plot(solver=pinn, filename=f'./{graph_folder}/{img_nn_result_error}{img_extensions}')\n",
     "display(Markdown('![NN Error result](' + f'./{graph_folder}/{img_nn_result_error}{img_extensions}' + ')'))"
@@ -1029,7 +1115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "2cc792fe16f92e4b",
    "metadata": {
     "ExecuteTime": {
@@ -1037,7 +1123,20 @@
      "start_time": "2025-03-12T08:21:26.295329Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "![Loss Kurve](./graph/visual_loss.png)"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# plotting the solution\n",
     "pl.plot_loss(trainer, label='mean_loss', logy=True, filename=f'./{graph_folder}/{img_visual_loss}{img_extensions}')\n",
@@ -1054,10 +1153,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "b31d6d6b-82bc-4e94-aad6-44206ddebbea",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'sigma_t': array([1500,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
+      "          0,    0,    0,    0,    0,    0,    0,    0,    0], dtype=int64), 'total_epsilon': array([0.    , 0.0005, 0.0005, 0.0005, 0.0005, 0.0005, 0.0005, 0.0005,\n",
+      "       0.0005, 0.0005, 0.0005, 0.0005, 0.0005, 0.0005, 0.0005, 0.0005,\n",
+      "       0.0005, 0.0005, 0.0005, 0.0005]), 'delta_epsilon': array([0.0005, 0.    , 0.    , 0.    , 0.    , 0.    , 0.    , 0.    ,\n",
+      "       0.    , 0.    , 0.    , 0.    , 0.    , 0.    , 0.    , 0.    ,\n",
+      "       0.    , 0.    , 0.    , 0.    ]), 'delta_sigma': array([300,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+      "         0,   0,   0,   0,   0,   0,   0], dtype=int64)}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "### Data-Loss bis sigma_19\n",
+       "\n",
+       "| Index | total_epsilon | True sigma_t+1 | Predicted sigma_t+1 | Loss (True - Predicted) |\n",
+       "|--|--------------|---------------|--------------------|------------------------|\n",
+       "| 0 | 0.0 | 300 | 300.5455 | -0.5455 |\n",
+       "| 1 | 0.0005 | 0 | 0.0858 | -0.0858 |\n",
+       "| 2 | 0.0005 | 0 | 0.0858 | -0.0858 |\n",
+       "| 3 | 0.0005 | 0 | 0.0858 | -0.0858 |\n",
+       "| 4 | 0.0005 | 0 | 0.0858 | -0.0858 |\n",
+       "| 5 | 0.0005 | 0 | 0.0858 | -0.0858 |\n",
+       "| 6 | 0.0005 | 0 | 0.0858 | -0.0858 |\n",
+       "| 7 | 0.0005 | 0 | 0.0858 | -0.0858 |\n",
+       "| 8 | 0.0005 | 0 | 0.0858 | -0.0858 |\n",
+       "| 9 | 0.0005 | 0 | 0.0858 | -0.0858 |\n",
+       "| 10 | 0.0005 | 0 | 0.0858 | -0.0858 |\n",
+       "| 11 | 0.0005 | 0 | 0.0858 | -0.0858 |\n",
+       "| 12 | 0.0005 | 0 | 0.0858 | -0.0858 |\n",
+       "| 13 | 0.0005 | 0 | 0.0858 | -0.0858 |\n",
+       "| 14 | 0.0005 | 0 | 0.0858 | -0.0858 |\n",
+       "| 15 | 0.0005 | 0 | 0.0858 | -0.0858 |\n",
+       "| 16 | 0.0005 | 0 | 0.0858 | -0.0858 |\n",
+       "| 17 | 0.0005 | 0 | 0.0858 | -0.0858 |\n",
+       "| 18 | 0.0005 | 0 | 0.0858 | -0.0858 |\n",
+       "| 19 | 0.0005 | 0 | 0.0858 | -0.0858 |\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "![Prediction vs True Solution](./graph/visual_prediction-vs-truesolution_comp0.png)<br>**Hinweis:** Datenpunkte liegen sehr nahe beieinander."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "new_data = extract_excel(file_path=\"files/oedometer/oedo_trainingsdata_compare.xlsx\", sheet_name=\"Res\", selected_columns=[1, 2, 3, 5], row_start_range=0)\n",
     "\n",
@@ -1081,10 +1241,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "eb148e33-5cce-4311-91f3-f4e11197f8ee",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'sigma_t': array([1500,    0,    0,    0,    0,    0,    0,    0,    0,  854,    0,\n",
+      "          0,    0,    0,    0,    0,    0,    0,    0,    0], dtype=int64), 'total_epsilon': array([0.    , 0.0005, 0.0005, 0.0005, 0.0005, 0.0005, 0.0005, 0.0005,\n",
+      "       0.0005, 0.0005, 0.001 , 0.001 , 0.001 , 0.001 , 0.001 , 0.001 ,\n",
+      "       0.001 , 0.001 , 0.001 , 0.001 ]), 'delta_epsilon': array([0.0005, 0.    , 0.    , 0.    , 0.    , 0.    , 0.    , 0.    ,\n",
+      "       0.    , 0.0005, 0.    , 0.    , 0.    , 0.    , 0.    , 0.    ,\n",
+      "       0.    , 0.    , 0.    , 0.    ]), 'delta_sigma': array([300. ,   0. ,   0. ,   0. ,   0. ,   0. ,   0. ,   0. ,   0. ,\n",
+      "       170.8,   0. ,   0. ,   0. ,   0. ,   0. ,   0. ,   0. ,   0. ,\n",
+      "         0. ,   0. ])}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "### Data-Loss bis sigma_19\n",
+       "\n",
+       "| Index | total_epsilon | True sigma_t+1 | Predicted sigma_t+1 | Loss (True - Predicted) |\n",
+       "|--|--------------|---------------|--------------------|------------------------|\n",
+       "| 0 | 0.0 | 300.0 | 300.5455 | -0.5455 |\n",
+       "| 1 | 0.0005 | 0.0 | 0.0858 | -0.0858 |\n",
+       "| 2 | 0.0005 | 0.0 | 0.0858 | -0.0858 |\n",
+       "| 3 | 0.0005 | 0.0 | 0.0858 | -0.0858 |\n",
+       "| 4 | 0.0005 | 0.0 | 0.0858 | -0.0858 |\n",
+       "| 5 | 0.0005 | 0.0 | 0.0858 | -0.0858 |\n",
+       "| 6 | 0.0005 | 0.0 | 0.0858 | -0.0858 |\n",
+       "| 7 | 0.0005 | 0.0 | 0.0858 | -0.0858 |\n",
+       "| 8 | 0.0005 | 0.0 | 0.0858 | -0.0858 |\n",
+       "| 9 | 0.0005 | 170.8 | 171.3456 | -0.5456 |\n",
+       "| 10 | 0.001 | 0.0 | 0.0858 | -0.0858 |\n",
+       "| 11 | 0.001 | 0.0 | 0.0858 | -0.0858 |\n",
+       "| 12 | 0.001 | 0.0 | 0.0858 | -0.0858 |\n",
+       "| 13 | 0.001 | 0.0 | 0.0858 | -0.0858 |\n",
+       "| 14 | 0.001 | 0.0 | 0.0858 | -0.0858 |\n",
+       "| 15 | 0.001 | 0.0 | 0.0858 | -0.0858 |\n",
+       "| 16 | 0.001 | 0.0 | 0.0858 | -0.0858 |\n",
+       "| 17 | 0.001 | 0.0 | 0.0858 | -0.0858 |\n",
+       "| 18 | 0.001 | 0.0 | 0.0858 | -0.0858 |\n",
+       "| 19 | 0.001 | 0.0 | 0.0858 | -0.0858 |\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "![Prediction vs True Solution](./graph/visual_prediction-vs-truesolution_comp1.png)<br>**Hinweis:** Datenpunkte liegen sehr nahe beieinander."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "new_data = extract_excel(file_path=\"files/oedometer/oedo_trainingsdata_compare2.xlsx\", sheet_name=\"Res\", selected_columns=[1, 2, 3, 5], row_start_range=0)\n",
     "\n",
@@ -1108,10 +1330,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "b0d968d0-ed7a-4ea2-b613-23935a7b789b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'sigma_t': array([1500,    0,    0,    0,    0,    0,    0,    0,    0,  854,    0,\n",
+      "          0,    0,    0,    0,    0,    0,    0,    0,    0], dtype=int64), 'total_epsilon': array([0.   , 0.001, 0.001, 0.001, 0.001, 0.001, 0.001, 0.001, 0.001,\n",
+      "       0.001, 0.002, 0.002, 0.002, 0.002, 0.002, 0.002, 0.002, 0.002,\n",
+      "       0.002, 0.002]), 'delta_epsilon': array([0.001, 0.   , 0.   , 0.   , 0.   , 0.   , 0.   , 0.   , 0.   ,\n",
+      "       0.001, 0.   , 0.   , 0.   , 0.   , 0.   , 0.   , 0.   , 0.   ,\n",
+      "       0.   , 0.   ]), 'delta_sigma': array([600. ,   0. ,   0. ,   0. ,   0. ,   0. ,   0. ,   0. ,   0. ,\n",
+      "       341.6,   0. ,   0. ,   0. ,   0. ,   0. ,   0. ,   0. ,   0. ,\n",
+      "         0. ,   0. ])}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "### Data-Loss bis sigma_19\n",
+       "\n",
+       "| Index | total_epsilon | True sigma_t+1 | Predicted sigma_t+1 | Loss (True - Predicted) |\n",
+       "|--|--------------|---------------|--------------------|------------------------|\n",
+       "| 0 | 0.0 | 600.0 | 300.5456 | 299.4544 |\n",
+       "| 1 | 0.001 | 0.0 | 0.0858 | -0.0858 |\n",
+       "| 2 | 0.001 | 0.0 | 0.0858 | -0.0858 |\n",
+       "| 3 | 0.001 | 0.0 | 0.0858 | -0.0858 |\n",
+       "| 4 | 0.001 | 0.0 | 0.0858 | -0.0858 |\n",
+       "| 5 | 0.001 | 0.0 | 0.0858 | -0.0858 |\n",
+       "| 6 | 0.001 | 0.0 | 0.0858 | -0.0858 |\n",
+       "| 7 | 0.001 | 0.0 | 0.0858 | -0.0858 |\n",
+       "| 8 | 0.001 | 0.0 | 0.0858 | -0.0858 |\n",
+       "| 9 | 0.001 | 341.6 | 171.3455 | 170.2545 |\n",
+       "| 10 | 0.002 | 0.0 | 0.0858 | -0.0858 |\n",
+       "| 11 | 0.002 | 0.0 | 0.0858 | -0.0858 |\n",
+       "| 12 | 0.002 | 0.0 | 0.0858 | -0.0858 |\n",
+       "| 13 | 0.002 | 0.0 | 0.0858 | -0.0858 |\n",
+       "| 14 | 0.002 | 0.0 | 0.0858 | -0.0858 |\n",
+       "| 15 | 0.002 | 0.0 | 0.0858 | -0.0858 |\n",
+       "| 16 | 0.002 | 0.0 | 0.0858 | -0.0858 |\n",
+       "| 17 | 0.002 | 0.0 | 0.0858 | -0.0858 |\n",
+       "| 18 | 0.002 | 0.0 | 0.0858 | -0.0858 |\n",
+       "| 19 | 0.002 | 0.0 | 0.0858 | -0.0858 |\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "![Prediction vs True Solution](./graph/visual_prediction-vs-truesolution_comp2.png)<br>**Hinweis:** Datenpunkte liegen sehr nahe beieinander."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "new_data = extract_excel(file_path=\"files/oedometer/oedo_trainingsdata_compare3.xlsx\", sheet_name=\"Res\", selected_columns=[1, 2, 3, 5], row_start_range=0)\n",
     "\n",
