--- a/01_main_problem_no_bounderys.ipynb
+++ b/01_main_problem_no_bounderys.ipynb
@@ -170,15 +170,17 @@
     "        return arr.tolist() if isinstance(arr, np.ndarray) else arr\n",
     "\n",
     "    total_epsilon = to_list(data_dict[\"total_epsilon\"])\n",
+    "    delta_epsilon = to_list(data_dict[\"delta_epsilon\"])\n",
     "    delta_sigma_true = to_list(data_dict[\"delta_sigma\"])\n",
     "    delta_sigma_pred = to_list(delta_sigma_pred.flatten())  # Falls `delta_sigma_pred` ein 2D-Array ist\n",
     "    \n",
     "    # Überprüfen, ob die Längen konsistent sind\n",
-    "    min_len = min(len(total_epsilon), len(delta_sigma_true), len(delta_sigma_pred), max_i)\n",
+    "    min_len = min(len(total_epsilon), len(delta_epsilon), len(delta_sigma_true), len(delta_sigma_pred), max_i)\n",
     "\n",
     "    # Erstelle eine Tabelle für die übersichtliche Darstellung\n",
     "    data_loss_table = {\n",
     "        \"total_epsilon\" : list(total_epsilon[:min_len]), \n",
+    "        \"delta_epsilon\" : list(delta_epsilon[:min_len]), \n",
     "        \"True sigma_t+1\": list(delta_sigma_true[:min_len]),\n",
     "        \"Predicted sigma_t+1\": list(delta_sigma_pred[:min_len]),\n",
     "        \"Loss (True - Predicted)\": list(np.round(np.array(delta_sigma_true[:min_len]) - np.array(delta_sigma_pred[:min_len]), 5))\n",
@@ -755,7 +757,7 @@
     "    oedo_parameter = {'e_0':1.00, 'C_c':0.005, 'delta_epsilon':0.0005, 'sigma_t':1.00, 'max_n':100, 'rand_epsilon':False}\n",
     "    input_conditions = {}\n",
     "    for i in range(max_input_pts):\n",
-    "        oedo_parameter['delta_epsilon'] =+ .0001\n",
+    "        oedo_parameter['delta_epsilon'] = oedo_parameter['delta_epsilon'] + .0001\n",
     "        data_dict = vars(Oedometer(**oedo_parameter))\n",
     "\n",
     "        sigma_t_train = LabelTensor(tensor(data_dict['sigma_t'][0], dtype=torch.float).unsqueeze(-1),['sigma_t'])\n",
@@ -875,20 +877,11 @@
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "GPU available: False, used: False\n",
-      "TPU available: False, using: 0 TPU cores\n",
-      "HPU available: False, using: 0 HPUs\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Debugging Info:\n",
-      "‼️Länge der Eingabepunkte (input_pts): 100\n",
+      "‼️Länge der Eingabepunkte (input_pts): 1\n",
       "‼️Länge der Ausgabepunkte (output_pts): 100\n"
      ]
     },
@@ -896,13 +889,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "GPU available: False, used: False\n",
+      "TPU available: False, using: 0 TPU cores\n",
+      "HPU available: False, using: 0 HPUs\n",
       "C:\\Users\\hab185\\Documents\\00_Tim\\01_Implementierung\\pina_oedometer\\venv\\Lib\\site-packages\\pytorch_lightning\\loops\\fit_loop.py:310: The number of training batches (10) is smaller than the logging interval Trainer(log_every_n_steps=50). Set a lower value for log_every_n_steps if you want to see logs for the training epoch.\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "82bd686fd4434533b0114fd877434ea6",
+       "model_id": "d7baaac022754bc9b43d578f9e0c79d2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -931,7 +927,7 @@
     {
      "data": {
       "text/plain": [
-       "{'data_loss': tensor(0.2160), 'mean_loss': tensor(0.2160)}"
+       "{'data_loss': tensor(0.0171), 'mean_loss': tensor(0.0171)}"
       ]
      },
      "execution_count": 8,
@@ -950,7 +946,7 @@
     "if debug_mode:\n",
     "    print('Debugging Info:')\n",
     "    # Überprüfen der Größe der Eingabepunkte und Ausgabepunkte\n",
-    "    print(\"‼️Länge der Eingabepunkte (input_pts):\", len(problem.input_pts['data']))\n",
+    "    print(\"‼️Länge der Eingabepunkte (input_pts):\", len(problem.input_pts))\n",
     "    print(\"‼️Länge der Ausgabepunkte (output_pts):\", len(problem.output_pts))\n",
     "\n",
     "# Model erstellen\n",
@@ -1019,28 +1015,28 @@
       "text/markdown": [
        "### Data-Loss bis sigma_19\n",
        "\n",
-       "| Index | total_epsilon | True sigma_t+1 | Predicted sigma_t+1 | Loss (True - Predicted) |\n",
-       "|--|--------------|---------------|--------------------|------------------------|\n",
-       "| 0 | 0 | 0.2 | 0.2001 | -0.0001 |\n",
-       "| 1 | 0.0005 | 0.24 | 0.2402 | -0.0002 |\n",
-       "| 2 | 0.001 | 0.288 | 0.2883 | -0.0003 |\n",
-       "| 3 | 0.0015 | 0.3456 | 0.346 | -0.0004 |\n",
-       "| 4 | 0.002 | 0.4147 | 0.415 | -0.0003 |\n",
-       "| 5 | 0.0025 | 0.4977 | 0.4972 | 0.0004 |\n",
-       "| 6 | 0.003 | 0.5972 | 0.5958 | 0.0014 |\n",
-       "| 7 | 0.0035 | 0.7166 | 0.7218 | -0.0052 |\n",
-       "| 8 | 0.004 | 0.86 | 0.8596 | 0.0004 |\n",
-       "| 9 | 0.0045 | 1.032 | 1.0312 | 0.0008 |\n",
-       "| 10 | 0.005 | 1.2383 | 1.2438 | -0.0054 |\n",
-       "| 11 | 0.0055 | 1.486 | 1.469 | 0.0171 |\n",
-       "| 12 | 0.006 | 1.7832 | 1.7415 | 0.0417 |\n",
-       "| 13 | 0.0065 | 2.1399 | 2.0951 | 0.0447 |\n",
-       "| 14 | 0.007 | 2.5678 | 2.5268 | 0.0411 |\n",
-       "| 15 | 0.0075 | 3.0814 | 3.0462 | 0.0352 |\n",
-       "| 16 | 0.008 | 3.6977 | 3.7234 | -0.0257 |\n",
-       "| 17 | 0.0085 | 4.4372 | 4.4499 | -0.0127 |\n",
-       "| 18 | 0.009 | 5.3247 | 5.4215 | -0.0969 |\n",
-       "| 19 | 0.0095 | 6.3896 | 6.6629 | -0.2733 |\n"
+       "| Index | total_epsilon | delta_epsilon | True sigma_t+1 | Predicted sigma_t+1 | Loss (True - Predicted) |\n",
+       "|--|--------------|--------------|---------------|--------------------|------------------------|\n",
+       "| 0 | 0 | 0.0005 | 0.2 | 0.2 | -0.0 |\n",
+       "| 1 | 0.0005 | 0.0005 | 0.24 | 0.24 | -0.0 |\n",
+       "| 2 | 0.001 | 0.0005 | 0.288 | 0.288 | -0.0 |\n",
+       "| 3 | 0.0015 | 0.0005 | 0.3456 | 0.3452 | 0.0004 |\n",
+       "| 4 | 0.002 | 0.0005 | 0.4147 | 0.415 | -0.0002 |\n",
+       "| 5 | 0.0025 | 0.0005 | 0.4977 | 0.4993 | -0.0016 |\n",
+       "| 6 | 0.003 | 0.0005 | 0.5972 | 0.5987 | -0.0015 |\n",
+       "| 7 | 0.0035 | 0.0005 | 0.7166 | 0.7156 | 0.001 |\n",
+       "| 8 | 0.004 | 0.0005 | 0.86 | 0.8566 | 0.0033 |\n",
+       "| 9 | 0.0045 | 0.0005 | 1.032 | 1.0211 | 0.0108 |\n",
+       "| 10 | 0.005 | 0.0005 | 1.2383 | 1.2223 | 0.0161 |\n",
+       "| 11 | 0.0055 | 0.0005 | 1.486 | 1.4768 | 0.0092 |\n",
+       "| 12 | 0.006 | 0.0005 | 1.7832 | 1.7816 | 0.0016 |\n",
+       "| 13 | 0.0065 | 0.0005 | 2.1399 | 2.1474 | -0.0076 |\n",
+       "| 14 | 0.007 | 0.0005 | 2.5678 | 2.5864 | -0.0185 |\n",
+       "| 15 | 0.0075 | 0.0005 | 3.0814 | 3.1131 | -0.0317 |\n",
+       "| 16 | 0.008 | 0.0005 | 3.6977 | 3.7477 | -0.05 |\n",
+       "| 17 | 0.0085 | 0.0005 | 4.4372 | 4.51 | -0.0728 |\n",
+       "| 18 | 0.009 | 0.0005 | 5.3247 | 5.4129 | -0.0882 |\n",
+       "| 19 | 0.0095 | 0.0005 | 6.3896 | 6.4934 | -0.1038 |\n"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -1162,9 +1158,8 @@
      "output_type": "stream",
      "text": [
       "{'sigma_t': array([1500,    0,    0,    0,    0,    0,    0,    0,    0,    0,    0,\n",
-      "          0,    0,    0,    0,    0,    0,    0,    0,    0], dtype=int64), 'total_epsilon': array([0.    , 0.0005, 0.0005, 0.0005, 0.0005, 0.0005, 0.0005, 0.0005,\n",
-      "       0.0005, 0.0005, 0.0005, 0.0005, 0.0005, 0.0005, 0.0005, 0.0005,\n",
-      "       0.0005, 0.0005, 0.0005, 0.0005]), 'delta_epsilon': array([0.0005, 0.    , 0.    , 0.    , 0.    , 0.    , 0.    , 0.    ,\n",
+      "          0,    0,    0,    0,    0,    0,    0,    0,    0], dtype=int64), 'total_epsilon': array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+      "      dtype=int64), 'delta_epsilon': array([0.0005, 0.    , 0.    , 0.    , 0.    , 0.    , 0.    , 0.    ,\n",
       "       0.    , 0.    , 0.    , 0.    , 0.    , 0.    , 0.    , 0.    ,\n",
       "       0.    , 0.    , 0.    , 0.    ]), 'delta_sigma': array([300,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
       "         0,   0,   0,   0,   0,   0,   0], dtype=int64)}\n"
@@ -1175,28 +1170,28 @@
       "text/markdown": [
        "### Data-Loss bis sigma_19\n",
        "\n",
-       "| Index | total_epsilon | True sigma_t+1 | Predicted sigma_t+1 | Loss (True - Predicted) |\n",
-       "|--|--------------|---------------|--------------------|------------------------|\n",
-       "| 0 | 0.0 | 300 | 300.5455 | -0.5455 |\n",
-       "| 1 | 0.0005 | 0 | 0.0858 | -0.0858 |\n",
-       "| 2 | 0.0005 | 0 | 0.0858 | -0.0858 |\n",
-       "| 3 | 0.0005 | 0 | 0.0858 | -0.0858 |\n",
-       "| 4 | 0.0005 | 0 | 0.0858 | -0.0858 |\n",
-       "| 5 | 0.0005 | 0 | 0.0858 | -0.0858 |\n",
-       "| 6 | 0.0005 | 0 | 0.0858 | -0.0858 |\n",
-       "| 7 | 0.0005 | 0 | 0.0858 | -0.0858 |\n",
-       "| 8 | 0.0005 | 0 | 0.0858 | -0.0858 |\n",
-       "| 9 | 0.0005 | 0 | 0.0858 | -0.0858 |\n",
-       "| 10 | 0.0005 | 0 | 0.0858 | -0.0858 |\n",
-       "| 11 | 0.0005 | 0 | 0.0858 | -0.0858 |\n",
-       "| 12 | 0.0005 | 0 | 0.0858 | -0.0858 |\n",
-       "| 13 | 0.0005 | 0 | 0.0858 | -0.0858 |\n",
-       "| 14 | 0.0005 | 0 | 0.0858 | -0.0858 |\n",
-       "| 15 | 0.0005 | 0 | 0.0858 | -0.0858 |\n",
-       "| 16 | 0.0005 | 0 | 0.0858 | -0.0858 |\n",
-       "| 17 | 0.0005 | 0 | 0.0858 | -0.0858 |\n",
-       "| 18 | 0.0005 | 0 | 0.0858 | -0.0858 |\n",
-       "| 19 | 0.0005 | 0 | 0.0858 | -0.0858 |\n"
+       "| Index | total_epsilon | delta_epsilon | True sigma_t+1 | Predicted sigma_t+1 | Loss (True - Predicted) |\n",
+       "|--|--------------|--------------|---------------|--------------------|------------------------|\n",
+       "| 0 | 0 | 0.0005 | 300 | 300.1018 | -0.1018 |\n",
+       "| 1 | 0 | 0.0 | 0 | 0.1316 | -0.1316 |\n",
+       "| 2 | 0 | 0.0 | 0 | 0.1316 | -0.1316 |\n",
+       "| 3 | 0 | 0.0 | 0 | 0.1316 | -0.1316 |\n",
+       "| 4 | 0 | 0.0 | 0 | 0.1316 | -0.1316 |\n",
+       "| 5 | 0 | 0.0 | 0 | 0.1316 | -0.1316 |\n",
+       "| 6 | 0 | 0.0 | 0 | 0.1316 | -0.1316 |\n",
+       "| 7 | 0 | 0.0 | 0 | 0.1316 | -0.1316 |\n",
+       "| 8 | 0 | 0.0 | 0 | 0.1316 | -0.1316 |\n",
+       "| 9 | 0 | 0.0 | 0 | 0.1316 | -0.1316 |\n",
+       "| 10 | 0 | 0.0 | 0 | 0.1316 | -0.1316 |\n",
+       "| 11 | 0 | 0.0 | 0 | 0.1316 | -0.1316 |\n",
+       "| 12 | 0 | 0.0 | 0 | 0.1316 | -0.1316 |\n",
+       "| 13 | 0 | 0.0 | 0 | 0.1316 | -0.1316 |\n",
+       "| 14 | 0 | 0.0 | 0 | 0.1316 | -0.1316 |\n",
+       "| 15 | 0 | 0.0 | 0 | 0.1316 | -0.1316 |\n",
+       "| 16 | 0 | 0.0 | 0 | 0.1316 | -0.1316 |\n",
+       "| 17 | 0 | 0.0 | 0 | 0.1316 | -0.1316 |\n",
+       "| 18 | 0 | 0.0 | 0 | 0.1316 | -0.1316 |\n",
+       "| 19 | 0 | 0.0 | 0 | 0.1316 | -0.1316 |\n"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -1250,9 +1245,8 @@
      "output_type": "stream",
      "text": [
       "{'sigma_t': array([1500,    0,    0,    0,    0,    0,    0,    0,    0,  854,    0,\n",
-      "          0,    0,    0,    0,    0,    0,    0,    0,    0], dtype=int64), 'total_epsilon': array([0.    , 0.0005, 0.0005, 0.0005, 0.0005, 0.0005, 0.0005, 0.0005,\n",
-      "       0.0005, 0.0005, 0.001 , 0.001 , 0.001 , 0.001 , 0.001 , 0.001 ,\n",
-      "       0.001 , 0.001 , 0.001 , 0.001 ]), 'delta_epsilon': array([0.0005, 0.    , 0.    , 0.    , 0.    , 0.    , 0.    , 0.    ,\n",
+      "          0,    0,    0,    0,    0,    0,    0,    0,    0], dtype=int64), 'total_epsilon': array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+      "      dtype=int64), 'delta_epsilon': array([0.0005, 0.    , 0.    , 0.    , 0.    , 0.    , 0.    , 0.    ,\n",
       "       0.    , 0.0005, 0.    , 0.    , 0.    , 0.    , 0.    , 0.    ,\n",
       "       0.    , 0.    , 0.    , 0.    ]), 'delta_sigma': array([300. ,   0. ,   0. ,   0. ,   0. ,   0. ,   0. ,   0. ,   0. ,\n",
       "       170.8,   0. ,   0. ,   0. ,   0. ,   0. ,   0. ,   0. ,   0. ,\n",
@@ -1264,28 +1258,28 @@
       "text/markdown": [
        "### Data-Loss bis sigma_19\n",
        "\n",
-       "| Index | total_epsilon | True sigma_t+1 | Predicted sigma_t+1 | Loss (True - Predicted) |\n",
-       "|--|--------------|---------------|--------------------|------------------------|\n",
-       "| 0 | 0.0 | 300.0 | 300.5455 | -0.5455 |\n",
-       "| 1 | 0.0005 | 0.0 | 0.0858 | -0.0858 |\n",
-       "| 2 | 0.0005 | 0.0 | 0.0858 | -0.0858 |\n",
-       "| 3 | 0.0005 | 0.0 | 0.0858 | -0.0858 |\n",
-       "| 4 | 0.0005 | 0.0 | 0.0858 | -0.0858 |\n",
-       "| 5 | 0.0005 | 0.0 | 0.0858 | -0.0858 |\n",
-       "| 6 | 0.0005 | 0.0 | 0.0858 | -0.0858 |\n",
-       "| 7 | 0.0005 | 0.0 | 0.0858 | -0.0858 |\n",
-       "| 8 | 0.0005 | 0.0 | 0.0858 | -0.0858 |\n",
-       "| 9 | 0.0005 | 170.8 | 171.3456 | -0.5456 |\n",
-       "| 10 | 0.001 | 0.0 | 0.0858 | -0.0858 |\n",
-       "| 11 | 0.001 | 0.0 | 0.0858 | -0.0858 |\n",
-       "| 12 | 0.001 | 0.0 | 0.0858 | -0.0858 |\n",
-       "| 13 | 0.001 | 0.0 | 0.0858 | -0.0858 |\n",
-       "| 14 | 0.001 | 0.0 | 0.0858 | -0.0858 |\n",
-       "| 15 | 0.001 | 0.0 | 0.0858 | -0.0858 |\n",
-       "| 16 | 0.001 | 0.0 | 0.0858 | -0.0858 |\n",
-       "| 17 | 0.001 | 0.0 | 0.0858 | -0.0858 |\n",
-       "| 18 | 0.001 | 0.0 | 0.0858 | -0.0858 |\n",
-       "| 19 | 0.001 | 0.0 | 0.0858 | -0.0858 |\n"
+       "| Index | total_epsilon | delta_epsilon | True sigma_t+1 | Predicted sigma_t+1 | Loss (True - Predicted) |\n",
+       "|--|--------------|--------------|---------------|--------------------|------------------------|\n",
+       "| 0 | 0 | 0.0005 | 300.0 | 300.1018 | -0.1018 |\n",
+       "| 1 | 0 | 0.0 | 0.0 | 0.1316 | -0.1316 |\n",
+       "| 2 | 0 | 0.0 | 0.0 | 0.1316 | -0.1316 |\n",
+       "| 3 | 0 | 0.0 | 0.0 | 0.1316 | -0.1316 |\n",
+       "| 4 | 0 | 0.0 | 0.0 | 0.1316 | -0.1316 |\n",
+       "| 5 | 0 | 0.0 | 0.0 | 0.1316 | -0.1316 |\n",
+       "| 6 | 0 | 0.0 | 0.0 | 0.1316 | -0.1316 |\n",
+       "| 7 | 0 | 0.0 | 0.0 | 0.1316 | -0.1316 |\n",
+       "| 8 | 0 | 0.0 | 0.0 | 0.1316 | -0.1316 |\n",
+       "| 9 | 0 | 0.0005 | 170.8 | 170.9017 | -0.1017 |\n",
+       "| 10 | 0 | 0.0 | 0.0 | 0.1316 | -0.1316 |\n",
+       "| 11 | 0 | 0.0 | 0.0 | 0.1316 | -0.1316 |\n",
+       "| 12 | 0 | 0.0 | 0.0 | 0.1316 | -0.1316 |\n",
+       "| 13 | 0 | 0.0 | 0.0 | 0.1316 | -0.1316 |\n",
+       "| 14 | 0 | 0.0 | 0.0 | 0.1316 | -0.1316 |\n",
+       "| 15 | 0 | 0.0 | 0.0 | 0.1316 | -0.1316 |\n",
+       "| 16 | 0 | 0.0 | 0.0 | 0.1316 | -0.1316 |\n",
+       "| 17 | 0 | 0.0 | 0.0 | 0.1316 | -0.1316 |\n",
+       "| 18 | 0 | 0.0 | 0.0 | 0.1316 | -0.1316 |\n",
+       "| 19 | 0 | 0.0 | 0.0 | 0.1316 | -0.1316 |\n"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -1339,11 +1333,10 @@
      "output_type": "stream",
      "text": [
       "{'sigma_t': array([1500,    0,    0,    0,    0,    0,    0,    0,    0,  854,    0,\n",
-      "          0,    0,    0,    0,    0,    0,    0,    0,    0], dtype=int64), 'total_epsilon': array([0.   , 0.001, 0.001, 0.001, 0.001, 0.001, 0.001, 0.001, 0.001,\n",
-      "       0.001, 0.002, 0.002, 0.002, 0.002, 0.002, 0.002, 0.002, 0.002,\n",
-      "       0.002, 0.002]), 'delta_epsilon': array([0.001, 0.   , 0.   , 0.   , 0.   , 0.   , 0.   , 0.   , 0.   ,\n",
-      "       0.001, 0.   , 0.   , 0.   , 0.   , 0.   , 0.   , 0.   , 0.   ,\n",
-      "       0.   , 0.   ]), 'delta_sigma': array([600. ,   0. ,   0. ,   0. ,   0. ,   0. ,   0. ,   0. ,   0. ,\n",
+      "          0,    0,    0,    0,    0,    0,    0,    0,    0], dtype=int64), 'total_epsilon': array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+      "      dtype=int64), 'delta_epsilon': array([0.001 , 0.    , 0.    , 0.    , 0.    , 0.    , 0.    , 0.    ,\n",
+      "       0.    , 0.0005, 0.    , 0.    , 0.    , 0.    , 0.    , 0.    ,\n",
+      "       0.    , 0.    , 0.    , 0.    ]), 'delta_sigma': array([600. ,   0. ,   0. ,   0. ,   0. ,   0. ,   0. ,   0. ,   0. ,\n",
       "       341.6,   0. ,   0. ,   0. ,   0. ,   0. ,   0. ,   0. ,   0. ,\n",
       "         0. ,   0. ])}\n"
      ]
@@ -1353,28 +1346,28 @@
       "text/markdown": [
        "### Data-Loss bis sigma_19\n",
        "\n",
-       "| Index | total_epsilon | True sigma_t+1 | Predicted sigma_t+1 | Loss (True - Predicted) |\n",
-       "|--|--------------|---------------|--------------------|------------------------|\n",
-       "| 0 | 0.0 | 600.0 | 300.5456 | 299.4544 |\n",
-       "| 1 | 0.001 | 0.0 | 0.0858 | -0.0858 |\n",
-       "| 2 | 0.001 | 0.0 | 0.0858 | -0.0858 |\n",
-       "| 3 | 0.001 | 0.0 | 0.0858 | -0.0858 |\n",
-       "| 4 | 0.001 | 0.0 | 0.0858 | -0.0858 |\n",
-       "| 5 | 0.001 | 0.0 | 0.0858 | -0.0858 |\n",
-       "| 6 | 0.001 | 0.0 | 0.0858 | -0.0858 |\n",
-       "| 7 | 0.001 | 0.0 | 0.0858 | -0.0858 |\n",
-       "| 8 | 0.001 | 0.0 | 0.0858 | -0.0858 |\n",
-       "| 9 | 0.001 | 341.6 | 171.3455 | 170.2545 |\n",
-       "| 10 | 0.002 | 0.0 | 0.0858 | -0.0858 |\n",
-       "| 11 | 0.002 | 0.0 | 0.0858 | -0.0858 |\n",
-       "| 12 | 0.002 | 0.0 | 0.0858 | -0.0858 |\n",
-       "| 13 | 0.002 | 0.0 | 0.0858 | -0.0858 |\n",
-       "| 14 | 0.002 | 0.0 | 0.0858 | -0.0858 |\n",
-       "| 15 | 0.002 | 0.0 | 0.0858 | -0.0858 |\n",
-       "| 16 | 0.002 | 0.0 | 0.0858 | -0.0858 |\n",
-       "| 17 | 0.002 | 0.0 | 0.0858 | -0.0858 |\n",
-       "| 18 | 0.002 | 0.0 | 0.0858 | -0.0858 |\n",
-       "| 19 | 0.002 | 0.0 | 0.0858 | -0.0858 |\n"
+       "| Index | total_epsilon | delta_epsilon | True sigma_t+1 | Predicted sigma_t+1 | Loss (True - Predicted) |\n",
+       "|--|--------------|--------------|---------------|--------------------|------------------------|\n",
+       "| 0 | 0 | 0.001 | 600.0 | 300.1018 | 299.8982 |\n",
+       "| 1 | 0 | 0.0 | 0.0 | 0.1316 | -0.1316 |\n",
+       "| 2 | 0 | 0.0 | 0.0 | 0.1316 | -0.1316 |\n",
+       "| 3 | 0 | 0.0 | 0.0 | 0.1316 | -0.1316 |\n",
+       "| 4 | 0 | 0.0 | 0.0 | 0.1316 | -0.1316 |\n",
+       "| 5 | 0 | 0.0 | 0.0 | 0.1316 | -0.1316 |\n",
+       "| 6 | 0 | 0.0 | 0.0 | 0.1316 | -0.1316 |\n",
+       "| 7 | 0 | 0.0 | 0.0 | 0.1316 | -0.1316 |\n",
+       "| 8 | 0 | 0.0 | 0.0 | 0.1316 | -0.1316 |\n",
+       "| 9 | 0 | 0.0005 | 341.6 | 170.9017 | 170.6982 |\n",
+       "| 10 | 0 | 0.0 | 0.0 | 0.1316 | -0.1316 |\n",
+       "| 11 | 0 | 0.0 | 0.0 | 0.1316 | -0.1316 |\n",
+       "| 12 | 0 | 0.0 | 0.0 | 0.1316 | -0.1316 |\n",
+       "| 13 | 0 | 0.0 | 0.0 | 0.1316 | -0.1316 |\n",
+       "| 14 | 0 | 0.0 | 0.0 | 0.1316 | -0.1316 |\n",
+       "| 15 | 0 | 0.0 | 0.0 | 0.1316 | -0.1316 |\n",
+       "| 16 | 0 | 0.0 | 0.0 | 0.1316 | -0.1316 |\n",
+       "| 17 | 0 | 0.0 | 0.0 | 0.1316 | -0.1316 |\n",
+       "| 18 | 0 | 0.0 | 0.0 | 0.1316 | -0.1316 |\n",
+       "| 19 | 0 | 0.0 | 0.0 | 0.1316 | -0.1316 |\n"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
