--- a/01_main_problem_no_bounderys.ipynb
+++ b/01_main_problem_no_bounderys.ipynb
@@ -171,16 +171,18 @@
     "\n",
     "    total_epsilon = to_list(data_dict[\"total_epsilon\"])\n",
     "    delta_epsilon = to_list(data_dict[\"delta_epsilon\"])\n",
+    "    sigma_t = to_list(data_dict[\"sigma_t\"])\n",
     "    delta_sigma_true = to_list(data_dict[\"delta_sigma\"])\n",
     "    delta_sigma_pred = to_list(delta_sigma_pred.flatten())  # Falls `delta_sigma_pred` ein 2D-Array ist\n",
     "    \n",
     "    # Überprüfen, ob die Längen konsistent sind\n",
-    "    min_len = min(len(total_epsilon), len(delta_epsilon), len(delta_sigma_true), len(delta_sigma_pred), max_i)\n",
+    "    min_len = min(len(total_epsilon), len(sigma_t), len(delta_epsilon), len(delta_sigma_true), len(delta_sigma_pred), max_i)\n",
     "\n",
     "    # Erstelle eine Tabelle für die übersichtliche Darstellung\n",
     "    data_loss_table = {\n",
     "        \"total_epsilon\" : list(total_epsilon[:min_len]), \n",
     "        \"delta_epsilon\" : list(delta_epsilon[:min_len]), \n",
+    "        \"sigma_t\" : list(sigma_t[:min_len]), \n",
     "        \"True sigma_t+1\": list(delta_sigma_true[:min_len]),\n",
     "        \"Predicted sigma_t+1\": list(delta_sigma_pred[:min_len]),\n",
     "        \"Loss (True - Predicted)\": list(np.round(np.array(delta_sigma_true[:min_len]) - np.array(delta_sigma_pred[:min_len]), 5))\n",
@@ -898,7 +900,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d7baaac022754bc9b43d578f9e0c79d2",
+       "model_id": "e4fa7df50d06409a96c034a35ec8bea8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -927,7 +929,7 @@
     {
      "data": {
       "text/plain": [
-       "{'data_loss': tensor(0.0171), 'mean_loss': tensor(0.0171)}"
+       "{'data_loss': tensor(0.0098), 'mean_loss': tensor(0.0098)}"
       ]
      },
      "execution_count": 8,
@@ -1015,28 +1017,28 @@
       "text/markdown": [
        "### Data-Loss bis sigma_19\n",
        "\n",
-       "| Index | total_epsilon | delta_epsilon | True sigma_t+1 | Predicted sigma_t+1 | Loss (True - Predicted) |\n",
-       "|--|--------------|--------------|---------------|--------------------|------------------------|\n",
-       "| 0 | 0 | 0.0005 | 0.2 | 0.2 | -0.0 |\n",
-       "| 1 | 0.0005 | 0.0005 | 0.24 | 0.24 | -0.0 |\n",
-       "| 2 | 0.001 | 0.0005 | 0.288 | 0.288 | -0.0 |\n",
-       "| 3 | 0.0015 | 0.0005 | 0.3456 | 0.3452 | 0.0004 |\n",
-       "| 4 | 0.002 | 0.0005 | 0.4147 | 0.415 | -0.0002 |\n",
-       "| 5 | 0.0025 | 0.0005 | 0.4977 | 0.4993 | -0.0016 |\n",
-       "| 6 | 0.003 | 0.0005 | 0.5972 | 0.5987 | -0.0015 |\n",
-       "| 7 | 0.0035 | 0.0005 | 0.7166 | 0.7156 | 0.001 |\n",
-       "| 8 | 0.004 | 0.0005 | 0.86 | 0.8566 | 0.0033 |\n",
-       "| 9 | 0.0045 | 0.0005 | 1.032 | 1.0211 | 0.0108 |\n",
-       "| 10 | 0.005 | 0.0005 | 1.2383 | 1.2223 | 0.0161 |\n",
-       "| 11 | 0.0055 | 0.0005 | 1.486 | 1.4768 | 0.0092 |\n",
-       "| 12 | 0.006 | 0.0005 | 1.7832 | 1.7816 | 0.0016 |\n",
-       "| 13 | 0.0065 | 0.0005 | 2.1399 | 2.1474 | -0.0076 |\n",
-       "| 14 | 0.007 | 0.0005 | 2.5678 | 2.5864 | -0.0185 |\n",
-       "| 15 | 0.0075 | 0.0005 | 3.0814 | 3.1131 | -0.0317 |\n",
-       "| 16 | 0.008 | 0.0005 | 3.6977 | 3.7477 | -0.05 |\n",
-       "| 17 | 0.0085 | 0.0005 | 4.4372 | 4.51 | -0.0728 |\n",
-       "| 18 | 0.009 | 0.0005 | 5.3247 | 5.4129 | -0.0882 |\n",
-       "| 19 | 0.0095 | 0.0005 | 6.3896 | 6.4934 | -0.1038 |\n"
+       "| Index | total_epsilon | delta_epsilon | sigma_t | True sigma_t+1 | Predicted sigma_t+1 | Loss (True - Predicted) |\n",
+       "|--|--------------|--------------|--------|---------------|--------------------|------------------------|\n",
+       "| 0 | 0 | 0.0005 | 1.0 | 0.2 | 0.2016 | -0.0016 |\n",
+       "| 1 | 0.0005 | 0.0005 | 1.2 | 0.24 | 0.2413 | -0.0014 |\n",
+       "| 2 | 0.001 | 0.0005 | 1.44 | 0.288 | 0.2892 | -0.0012 |\n",
+       "| 3 | 0.0015 | 0.0005 | 1.728 | 0.3456 | 0.3465 | -0.0009 |\n",
+       "| 4 | 0.002 | 0.0005 | 2.0736 | 0.4147 | 0.4151 | -0.0003 |\n",
+       "| 5 | 0.0025 | 0.0005 | 2.4883 | 0.4977 | 0.4976 | 0.0001 |\n",
+       "| 6 | 0.003 | 0.0005 | 2.986 | 0.5972 | 0.5973 | -0.0001 |\n",
+       "| 7 | 0.0035 | 0.0005 | 3.5832 | 0.7166 | 0.7162 | 0.0005 |\n",
+       "| 8 | 0.004 | 0.0005 | 4.2998 | 0.86 | 0.8603 | -0.0004 |\n",
+       "| 9 | 0.0045 | 0.0005 | 5.1598 | 1.032 | 1.0333 | -0.0013 |\n",
+       "| 10 | 0.005 | 0.0005 | 6.1917 | 1.2383 | 1.2396 | -0.0012 |\n",
+       "| 11 | 0.0055 | 0.0005 | 7.4301 | 1.486 | 1.4871 | -0.0011 |\n",
+       "| 12 | 0.006 | 0.0005 | 8.9161 | 1.7832 | 1.7847 | -0.0015 |\n",
+       "| 13 | 0.0065 | 0.0005 | 10.6993 | 2.1399 | 2.14 | -0.0001 |\n",
+       "| 14 | 0.007 | 0.0005 | 12.8392 | 2.5678 | 2.5659 | 0.0019 |\n",
+       "| 15 | 0.0075 | 0.0005 | 15.407 | 3.0814 | 3.0771 | 0.0043 |\n",
+       "| 16 | 0.008 | 0.0005 | 18.4884 | 3.6977 | 3.6944 | 0.0033 |\n",
+       "| 17 | 0.0085 | 0.0005 | 22.1861 | 4.4372 | 4.4384 | -0.0012 |\n",
+       "| 18 | 0.009 | 0.0005 | 26.6233 | 5.3247 | 5.3293 | -0.0047 |\n",
+       "| 19 | 0.0095 | 0.0005 | 31.948 | 6.3896 | 6.4099 | -0.0203 |\n"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -1170,28 +1172,28 @@
       "text/markdown": [
        "### Data-Loss bis sigma_19\n",
        "\n",
-       "| Index | total_epsilon | delta_epsilon | True sigma_t+1 | Predicted sigma_t+1 | Loss (True - Predicted) |\n",
-       "|--|--------------|--------------|---------------|--------------------|------------------------|\n",
-       "| 0 | 0 | 0.0005 | 300 | 300.1018 | -0.1018 |\n",
-       "| 1 | 0 | 0.0 | 0 | 0.1316 | -0.1316 |\n",
-       "| 2 | 0 | 0.0 | 0 | 0.1316 | -0.1316 |\n",
-       "| 3 | 0 | 0.0 | 0 | 0.1316 | -0.1316 |\n",
-       "| 4 | 0 | 0.0 | 0 | 0.1316 | -0.1316 |\n",
-       "| 5 | 0 | 0.0 | 0 | 0.1316 | -0.1316 |\n",
-       "| 6 | 0 | 0.0 | 0 | 0.1316 | -0.1316 |\n",
-       "| 7 | 0 | 0.0 | 0 | 0.1316 | -0.1316 |\n",
-       "| 8 | 0 | 0.0 | 0 | 0.1316 | -0.1316 |\n",
-       "| 9 | 0 | 0.0 | 0 | 0.1316 | -0.1316 |\n",
-       "| 10 | 0 | 0.0 | 0 | 0.1316 | -0.1316 |\n",
-       "| 11 | 0 | 0.0 | 0 | 0.1316 | -0.1316 |\n",
-       "| 12 | 0 | 0.0 | 0 | 0.1316 | -0.1316 |\n",
-       "| 13 | 0 | 0.0 | 0 | 0.1316 | -0.1316 |\n",
-       "| 14 | 0 | 0.0 | 0 | 0.1316 | -0.1316 |\n",
-       "| 15 | 0 | 0.0 | 0 | 0.1316 | -0.1316 |\n",
-       "| 16 | 0 | 0.0 | 0 | 0.1316 | -0.1316 |\n",
-       "| 17 | 0 | 0.0 | 0 | 0.1316 | -0.1316 |\n",
-       "| 18 | 0 | 0.0 | 0 | 0.1316 | -0.1316 |\n",
-       "| 19 | 0 | 0.0 | 0 | 0.1316 | -0.1316 |\n"
+       "| Index | total_epsilon | delta_epsilon | sigma_t | True sigma_t+1 | Predicted sigma_t+1 | Loss (True - Predicted) |\n",
+       "|--|--------------|--------------|--------|---------------|--------------------|------------------------|\n",
+       "| 0 | 0 | 0.0005 | 1500 | 300 | 300.0682 | -0.0682 |\n",
+       "| 1 | 0 | 0.0 | 0 | 0 | 0.0852 | -0.0852 |\n",
+       "| 2 | 0 | 0.0 | 0 | 0 | 0.0852 | -0.0852 |\n",
+       "| 3 | 0 | 0.0 | 0 | 0 | 0.0852 | -0.0852 |\n",
+       "| 4 | 0 | 0.0 | 0 | 0 | 0.0852 | -0.0852 |\n",
+       "| 5 | 0 | 0.0 | 0 | 0 | 0.0852 | -0.0852 |\n",
+       "| 6 | 0 | 0.0 | 0 | 0 | 0.0852 | -0.0852 |\n",
+       "| 7 | 0 | 0.0 | 0 | 0 | 0.0852 | -0.0852 |\n",
+       "| 8 | 0 | 0.0 | 0 | 0 | 0.0852 | -0.0852 |\n",
+       "| 9 | 0 | 0.0 | 0 | 0 | 0.0852 | -0.0852 |\n",
+       "| 10 | 0 | 0.0 | 0 | 0 | 0.0852 | -0.0852 |\n",
+       "| 11 | 0 | 0.0 | 0 | 0 | 0.0852 | -0.0852 |\n",
+       "| 12 | 0 | 0.0 | 0 | 0 | 0.0852 | -0.0852 |\n",
+       "| 13 | 0 | 0.0 | 0 | 0 | 0.0852 | -0.0852 |\n",
+       "| 14 | 0 | 0.0 | 0 | 0 | 0.0852 | -0.0852 |\n",
+       "| 15 | 0 | 0.0 | 0 | 0 | 0.0852 | -0.0852 |\n",
+       "| 16 | 0 | 0.0 | 0 | 0 | 0.0852 | -0.0852 |\n",
+       "| 17 | 0 | 0.0 | 0 | 0 | 0.0852 | -0.0852 |\n",
+       "| 18 | 0 | 0.0 | 0 | 0 | 0.0852 | -0.0852 |\n",
+       "| 19 | 0 | 0.0 | 0 | 0 | 0.0852 | -0.0852 |\n"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -1258,28 +1260,28 @@
       "text/markdown": [
        "### Data-Loss bis sigma_19\n",
        "\n",
-       "| Index | total_epsilon | delta_epsilon | True sigma_t+1 | Predicted sigma_t+1 | Loss (True - Predicted) |\n",
-       "|--|--------------|--------------|---------------|--------------------|------------------------|\n",
-       "| 0 | 0 | 0.0005 | 300.0 | 300.1018 | -0.1018 |\n",
-       "| 1 | 0 | 0.0 | 0.0 | 0.1316 | -0.1316 |\n",
-       "| 2 | 0 | 0.0 | 0.0 | 0.1316 | -0.1316 |\n",
-       "| 3 | 0 | 0.0 | 0.0 | 0.1316 | -0.1316 |\n",
-       "| 4 | 0 | 0.0 | 0.0 | 0.1316 | -0.1316 |\n",
-       "| 5 | 0 | 0.0 | 0.0 | 0.1316 | -0.1316 |\n",
-       "| 6 | 0 | 0.0 | 0.0 | 0.1316 | -0.1316 |\n",
-       "| 7 | 0 | 0.0 | 0.0 | 0.1316 | -0.1316 |\n",
-       "| 8 | 0 | 0.0 | 0.0 | 0.1316 | -0.1316 |\n",
-       "| 9 | 0 | 0.0005 | 170.8 | 170.9017 | -0.1017 |\n",
-       "| 10 | 0 | 0.0 | 0.0 | 0.1316 | -0.1316 |\n",
-       "| 11 | 0 | 0.0 | 0.0 | 0.1316 | -0.1316 |\n",
-       "| 12 | 0 | 0.0 | 0.0 | 0.1316 | -0.1316 |\n",
-       "| 13 | 0 | 0.0 | 0.0 | 0.1316 | -0.1316 |\n",
-       "| 14 | 0 | 0.0 | 0.0 | 0.1316 | -0.1316 |\n",
-       "| 15 | 0 | 0.0 | 0.0 | 0.1316 | -0.1316 |\n",
-       "| 16 | 0 | 0.0 | 0.0 | 0.1316 | -0.1316 |\n",
-       "| 17 | 0 | 0.0 | 0.0 | 0.1316 | -0.1316 |\n",
-       "| 18 | 0 | 0.0 | 0.0 | 0.1316 | -0.1316 |\n",
-       "| 19 | 0 | 0.0 | 0.0 | 0.1316 | -0.1316 |\n"
+       "| Index | total_epsilon | delta_epsilon | sigma_t | True sigma_t+1 | Predicted sigma_t+1 | Loss (True - Predicted) |\n",
+       "|--|--------------|--------------|--------|---------------|--------------------|------------------------|\n",
+       "| 0 | 0 | 0.0005 | 1500 | 300.0 | 300.0682 | -0.0682 |\n",
+       "| 1 | 0 | 0.0 | 0 | 0.0 | 0.0852 | -0.0852 |\n",
+       "| 2 | 0 | 0.0 | 0 | 0.0 | 0.0852 | -0.0852 |\n",
+       "| 3 | 0 | 0.0 | 0 | 0.0 | 0.0852 | -0.0852 |\n",
+       "| 4 | 0 | 0.0 | 0 | 0.0 | 0.0852 | -0.0852 |\n",
+       "| 5 | 0 | 0.0 | 0 | 0.0 | 0.0852 | -0.0852 |\n",
+       "| 6 | 0 | 0.0 | 0 | 0.0 | 0.0852 | -0.0852 |\n",
+       "| 7 | 0 | 0.0 | 0 | 0.0 | 0.0852 | -0.0852 |\n",
+       "| 8 | 0 | 0.0 | 0 | 0.0 | 0.0852 | -0.0852 |\n",
+       "| 9 | 0 | 0.0005 | 854 | 170.8 | 170.8682 | -0.0682 |\n",
+       "| 10 | 0 | 0.0 | 0 | 0.0 | 0.0852 | -0.0852 |\n",
+       "| 11 | 0 | 0.0 | 0 | 0.0 | 0.0852 | -0.0852 |\n",
+       "| 12 | 0 | 0.0 | 0 | 0.0 | 0.0852 | -0.0852 |\n",
+       "| 13 | 0 | 0.0 | 0 | 0.0 | 0.0852 | -0.0852 |\n",
+       "| 14 | 0 | 0.0 | 0 | 0.0 | 0.0852 | -0.0852 |\n",
+       "| 15 | 0 | 0.0 | 0 | 0.0 | 0.0852 | -0.0852 |\n",
+       "| 16 | 0 | 0.0 | 0 | 0.0 | 0.0852 | -0.0852 |\n",
+       "| 17 | 0 | 0.0 | 0 | 0.0 | 0.0852 | -0.0852 |\n",
+       "| 18 | 0 | 0.0 | 0 | 0.0 | 0.0852 | -0.0852 |\n",
+       "| 19 | 0 | 0.0 | 0 | 0.0 | 0.0852 | -0.0852 |\n"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -1346,28 +1348,28 @@
       "text/markdown": [
        "### Data-Loss bis sigma_19\n",
        "\n",
-       "| Index | total_epsilon | delta_epsilon | True sigma_t+1 | Predicted sigma_t+1 | Loss (True - Predicted) |\n",
-       "|--|--------------|--------------|---------------|--------------------|------------------------|\n",
-       "| 0 | 0 | 0.001 | 600.0 | 300.1018 | 299.8982 |\n",
-       "| 1 | 0 | 0.0 | 0.0 | 0.1316 | -0.1316 |\n",
-       "| 2 | 0 | 0.0 | 0.0 | 0.1316 | -0.1316 |\n",
-       "| 3 | 0 | 0.0 | 0.0 | 0.1316 | -0.1316 |\n",
-       "| 4 | 0 | 0.0 | 0.0 | 0.1316 | -0.1316 |\n",
-       "| 5 | 0 | 0.0 | 0.0 | 0.1316 | -0.1316 |\n",
-       "| 6 | 0 | 0.0 | 0.0 | 0.1316 | -0.1316 |\n",
-       "| 7 | 0 | 0.0 | 0.0 | 0.1316 | -0.1316 |\n",
-       "| 8 | 0 | 0.0 | 0.0 | 0.1316 | -0.1316 |\n",
-       "| 9 | 0 | 0.0005 | 341.6 | 170.9017 | 170.6982 |\n",
-       "| 10 | 0 | 0.0 | 0.0 | 0.1316 | -0.1316 |\n",
-       "| 11 | 0 | 0.0 | 0.0 | 0.1316 | -0.1316 |\n",
-       "| 12 | 0 | 0.0 | 0.0 | 0.1316 | -0.1316 |\n",
-       "| 13 | 0 | 0.0 | 0.0 | 0.1316 | -0.1316 |\n",
-       "| 14 | 0 | 0.0 | 0.0 | 0.1316 | -0.1316 |\n",
-       "| 15 | 0 | 0.0 | 0.0 | 0.1316 | -0.1316 |\n",
-       "| 16 | 0 | 0.0 | 0.0 | 0.1316 | -0.1316 |\n",
-       "| 17 | 0 | 0.0 | 0.0 | 0.1316 | -0.1316 |\n",
-       "| 18 | 0 | 0.0 | 0.0 | 0.1316 | -0.1316 |\n",
-       "| 19 | 0 | 0.0 | 0.0 | 0.1316 | -0.1316 |\n"
+       "| Index | total_epsilon | delta_epsilon | sigma_t | True sigma_t+1 | Predicted sigma_t+1 | Loss (True - Predicted) |\n",
+       "|--|--------------|--------------|--------|---------------|--------------------|------------------------|\n",
+       "| 0 | 0 | 0.001 | 1500 | 600.0 | 300.0681 | 299.9319 |\n",
+       "| 1 | 0 | 0.0 | 0 | 0.0 | 0.0852 | -0.0852 |\n",
+       "| 2 | 0 | 0.0 | 0 | 0.0 | 0.0852 | -0.0852 |\n",
+       "| 3 | 0 | 0.0 | 0 | 0.0 | 0.0852 | -0.0852 |\n",
+       "| 4 | 0 | 0.0 | 0 | 0.0 | 0.0852 | -0.0852 |\n",
+       "| 5 | 0 | 0.0 | 0 | 0.0 | 0.0852 | -0.0852 |\n",
+       "| 6 | 0 | 0.0 | 0 | 0.0 | 0.0852 | -0.0852 |\n",
+       "| 7 | 0 | 0.0 | 0 | 0.0 | 0.0852 | -0.0852 |\n",
+       "| 8 | 0 | 0.0 | 0 | 0.0 | 0.0852 | -0.0852 |\n",
+       "| 9 | 0 | 0.0005 | 854 | 341.6 | 170.8682 | 170.7318 |\n",
+       "| 10 | 0 | 0.0 | 0 | 0.0 | 0.0852 | -0.0852 |\n",
+       "| 11 | 0 | 0.0 | 0 | 0.0 | 0.0852 | -0.0852 |\n",
+       "| 12 | 0 | 0.0 | 0 | 0.0 | 0.0852 | -0.0852 |\n",
+       "| 13 | 0 | 0.0 | 0 | 0.0 | 0.0852 | -0.0852 |\n",
+       "| 14 | 0 | 0.0 | 0 | 0.0 | 0.0852 | -0.0852 |\n",
+       "| 15 | 0 | 0.0 | 0 | 0.0 | 0.0852 | -0.0852 |\n",
+       "| 16 | 0 | 0.0 | 0 | 0.0 | 0.0852 | -0.0852 |\n",
+       "| 17 | 0 | 0.0 | 0 | 0.0 | 0.0852 | -0.0852 |\n",
+       "| 18 | 0 | 0.0 | 0 | 0.0 | 0.0852 | -0.0852 |\n",
+       "| 19 | 0 | 0.0 | 0 | 0.0 | 0.0852 | -0.0852 |\n"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
